--- a/Example/SampleFramework/Example2_XmlFile/info.ini
+++ b/Example/SampleFramework/Example2_XmlFile/info.ini
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ClientInfo xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <CompanyName>mySwing</CompanyName>
+  <CompanyName>Waneta</CompanyName>
   <ProductName>u_utils</ProductName>
   <Version>1.0.20161207</Version>
   <SoftwareVersionCode>0</SoftwareVersionCode>
